# Alphalytics.py

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  setup.cfg  setup.py
.claude/: settings.local.json
alphalytics/: __init__.py  utils.py
alphalytics/data/: loaders.py
alphalytics/factors/: __init__.py  ic.py  quantiles.py  turnover.py  utils.py
alphalytics/plotting/: __init__.py  factors.py  performance.py  style.py
alphalytics/returns/: __init__.py  aggregators.py  capm.py  metrics.py  ratios.py  relative.py  risk.py
docs/: conf.py  index.rst
examples/: momentum_alpha.ipynb
src/alphalytics/: __init__.py  ic_analysis.py  performance_metrics.py  plotting.py  quantile_analysis.py  skeleton.py  turnover_analysis.py  utils.py
tests/: conftest.py  test_capm.py  test_factors.py  test_metrics.py  test_plotting.py  test_ratios.py  test_relative.py  test_risk.py  test_skeleton.py
