[metadata]
name = Alphalytics
description = Returns-based investment analysis and factor analysis for ETFs, equities, and mutual funds.
author = George Georgiev
author_email = georgegi86@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
python_requires = >=3.10
install_requires =
    pandas
    numpy
    scipy
    matplotlib
    seaborn
    quantstats

[options.packages.find]
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[tool:pytest]
addopts =
    --cov alphalytics --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs


